SERVER-85453: Make ExternalDataSourceScopeGuard only compatible with one plan executor (#18238)

GitOrigin-RevId: e74f473a6787ffce4dc886e2199155e57575cf55