docs/testing/fsm_concurrency_testing_framework.md
@@ -21,13 +21,11 @@ function.
 
 ![fsm.png](../images/testing/fsm.png)
 
-The runner provides three modes of execution for workloads: serial, parallel,
-and composed. Serial mode runs the provided workloads one after the other,
+The runner provides two modes of execution for workloads: serial and parallel.
+Serial mode runs the provided workloads one after the other,
 waiting for all threads of a workload to complete before moving on to the next
 workload. Parallel mode runs subsets of the provided workloads in separate
-threads simultaneously. Composed mode runs subsets of the provided workloads in
-the same threads simultaneously, with each thread moving between the states of
-multiple workloads.
+threads simultaneously.
 
 New methods were added to allow for finer-grained assertions under different
 situations. For example, a test that inserts a document into a collection, and
@@ -103,9 +101,8 @@ It's best to also declare states within its own closure so as not to interfere
 with the scope of $config. Each state takes two arguments, the db object and the
 collection name. For later, note that this db and collection are the only one
 that you can be guaranteed to "own" when asserting. Try to make each state a
-discrete unit of work that can stand alone without the other states (in fact, an
-FSM that requires another state to run before it will probably not work in
-Composed mode). Additionally, try to define each function that makes up a state
+discrete unit of work that can stand alone without the other states.
+Additionally, try to define each function that makes up a state
 with a name as opposed to anonymously - this makes easier to read backtraces
 when things go wrong.
 
@@ -362,11 +359,9 @@ runWorkloads functions, the third argument, can contain the following options
 (some depend on the run mode):
 
 * `numSubsets` - Not available in serial mode, determines how many subsets of
-  workloads to execute in parallel or composed mode
+  workloads to execute in parallel mode
 * `subsetSize` - Not available in serial mode, determines how large each subset of
   workloads executed is
-* `iterations` - Only available in composed mode, determines how many transitions
-  to perform between states in a single thread of composition.
 
 #### fsm_all.js
 
@@ -385,8 +380,8 @@ settings in `$config`.
 
 #### fsm_all_replication.js
 
-Sets up a replica set (with 3 mongods by default) and runs workloads serially,
-in parallel, or in composed mode. For example,
+Sets up a replica set (with 3 mongods by default) and runs workloads serially or
+in parallel. For example,
 
 `runWorkloadsSerially([<workload1>, <workload2>, ...], { replication: true } )`
 
@@ -396,7 +391,7 @@ primary.
 #### fsm_all_sharded.js
 
 Sets up a sharded cluster (with 2 shards and 1 mongos by default) and runs
-workloads serially, in parallel, or in composed mode. For example,
+workloads serially or in parallel. For example,
 
 `runWorkloadsInParallel([<workload1>, <workload2>, ...], { sharded: true } )`
 
@@ -405,8 +400,7 @@ creates a sharded cluster and runs workloads in parallel.
 #### fsm_all_sharded_replication.js
 
 Sets up a sharded cluster (with 2 shards, each having 3 replica set members, and
-1 mongos by default) and runs workloads serially, in parallel, or in composed
-mode.
+1 mongos by default) and runs workloads serially or in parallel.
 
 ### Excluding a workload
 
